--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
