--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "razorpay": "^2.8.4",
+    "react-scripts": "^5.0.1",
     "streamifier": "^0.1.1"
   }
 }
